--- a/css/custom.css
+++ b/css/custom.css
@@ -45,6 +45,8 @@ h2{margin:50px 0px;}
 
 .right-small {border-left:none;}
 
+a.right-off-canvas-toggle.menu-icon{position:fixed;}
+
 
 
 @media only screen and (max-width: 40em) {
