--- a/css/custom.css
+++ b/css/custom.css
@@ -40,10 +40,12 @@ h2{margin:50px 0px;
   font-size:40pt;
   color:#f1475e;}
 
-h2:before{content: url('img/slash.svg');
-  position:relative;
-  top:-2px;
-  margin-right:-12px;}
+h2:before{display: inline-block;
+  width: 50px;
+  height: 50px;
+  content: "";
+  background: url('../img/slash.svg') no-repeat 0 0;
+  background-size: 100%;}
 
 .project-info h3{color:#FFF;
   padding:8% 8% 3% 8%;
@@ -70,6 +72,12 @@ h6{font-family: 'cooper_hewittsemibold_italic';
   display:inline;
   line-height: 30pt;}
 
+.icons{padding:20px;}
+
+.icons h5{color:#2a2f36;
+  text-align: center;
+  margin-top:20px;}
+
 #inline-text{display:inline;
   font-size: 14pt;}
 
@@ -82,19 +90,15 @@ h6{font-family: 'cooper_hewittsemibold_italic';
   text-transform: none;
   padding:50px 0px;}
 
-#project-header hr{width:100%;
-  margin-top:35px;}
-
-#project-header img{width:20%;
-  z-index: 1;}
-
-
 hr{background-color:#f1475e;
   height: 2px;
   display: block;
   border: 0;
   width: 84%;
   margin: 0 auto;}
+
+div.large-12.medium-12.columns hr{width:100%;
+  margin-top:-25px;}
 
 .project-info a{
   position: absolute;
@@ -103,7 +107,8 @@ hr{background-color:#f1475e;
   width: 100%;
   height: 100%;
   background-color: #10838c;
-  background-image: url(http://media.dallas.city.cx/sites/70/2014-02/c398MnNN-1170x783.jpg);
+  background-image: url('../img/tree.jpg');
+  background-size: 100%;
   background-blend-mode: multiply;
   color: #FFF;
   visibility: hidden;
