Fixing Optimization on Project Pages
Fixed optimization of images on all project pages except NRA and Greasy
Garage, which had separate problems. Fixed button formatting (so it
doesn’t glitch up when hovered over). Made all logo appearances within
project pages link back to the home page.

--- a/css/custom.css
+++ b/css/custom.css
@@ -247,8 +247,8 @@ input[type="text"], textarea{border-radius: 5px;
   margin-bottom:-.3rem;
   line-height: 1rem;}
 
-.button:hover, .button:focus{background-color:transparent;
-  border:transparent;}
+.button:hover, .button:focus{background-color:#FFF;
+  border-color: #FFF;}
 
 
 /*MEDIA QUERIES*/
