--- a/css/custom.css
+++ b/css/custom.css
@@ -90,7 +90,8 @@ h6{font-family: 'cooper_hewittsemibold_italic';
   font-size:35pt;
   color:#10838c;
   text-transform: none;
-  padding:50px 0px;}
+  padding:50px 0px;
+  line-height:45pt;}
 
 hr{background-color:#f1475e;
   height: 2px;
@@ -223,7 +224,7 @@ div.large-12.medium-12.columns.small-hr hr{width:100%;
   top: 15px;
   left: -50px;}
 
-.menu-link img{width:10%;}
+.menu-link img{width:20%;}
 
 a{color:#FFF;}
 
@@ -272,9 +273,12 @@ input[type="text"], textarea{border-radius: 5px;
 
   .logo{padding:0;}
 
-  #project-header{font-size:30pt;}
+  #project-header{font-size:30pt;
+    line-height: 40pt;}
 
   .project-img{margin-top:50px;}
+
+  .project-info h3{line-height:30pt;}
 
 }
 
