--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,9 @@
 body{
   background-color:#FFF;}
 
+img{
+  width:100%;}
+
 .clear-padding{
   padding:0;}
 
@@ -274,6 +277,7 @@ input[type="submit"]{
 input[type="submit"]:hover{
   color:#f1475e;}
 
+
 /*MEDIA QUERIES*/
 
 @media only screen and (min-width: 90.063em){
@@ -318,16 +322,34 @@ input[type="submit"]:hover{
   .logo{
     padding:0;}
 
+
   h1{
     font-size:32pt;
     line-height:40pt;}
 
-  .project-img{
-    margin-top:50px;}
+  .project-img {
+    margin-top: 50px;}
+
+  .project-info a{
+    background-color:#FFFFFF;}
+
+  h4{
+    font-size:11pt;
+    padding:1% 4% 0% 8%;}
 
   h3{
-    font-size:20pt;
-    line-height:30pt;}
+    font-family:'cooper_hewittbook';
+    font-size:11pt;
+    line-height:25pt;
+    padding:1% 4% 0% 4%;}
+
+  div.small-12.columns.show-for-small-only{
+    margin-top:-94px;
+    background-color:rgba(5, 107, 115, 0.85);}
+
+  div.small-12.columns.show-for-small-only img{
+    width:4%;
+    margin:0% 4% 3% 4%;}
 
 }
 
@@ -346,6 +368,25 @@ input[type="submit"]:hover{
   h1, h2{
     font-size:28pt;
     line-height:40pt;}
+
+}
+
+@media screen and (min-width:0\0) {
+/* IE9 and IE10 rule sets go here */
+
+.project-info a{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background-color:#056b73;
+  background-image:url('');
+  background-size:100%;
+  color:#FFF;
+  visibility:hidden;
+  text-decoration:none;
+  transition:transform 1s;}
 
 }
 
