Fixed Thank You, A-FAN
Fixed the thank you page to include an additional link back to the home
page, also included the AIGA award on the A-FAN page.

--- a/css/custom.css
+++ b/css/custom.css
@@ -277,6 +277,13 @@ input[type="submit"]{
 input[type="submit"]:hover{
   color:#f1475e;}
 
+p#inline-text img{
+  width:8%;
+  margin-right:2%;}
+
+a[href^="mailto"] { 
+  color:#10838c;}
+
 
 /*MEDIA QUERIES*/
 
